<resources>
    <string name="app_name">EASY TOPUP KH</string>
    <string name="app_full_name">EASY TOPUP KH</string>
    <string name="easy_topup_kh">EASY TOPUP KH</string>
    <string name="txt_message">--------</string>
    <string name="crud_name">Name</string>
    <string name="crud_description">Description</string>
    <string name="crud_imie_start">IMIE Start (*123*)</string>
    <string name="crud_imie_end">IMIE End( # )</string>
    <string name="crud_imie_length">IMIE LENGTH ( 14 )</string>
    <string name="crud_save">SAVE</string>
    <string name="no_permission_msg">\"You don\'t have permission to access file location\"</string>
    <string name="add_success">Added Successfully!</string>
    <string name="add_not_success">Sorry record already existing name</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topup">Top up</string>
    <string name="dash">---------</string>
    <string name="no_camera_permission">Camera permission denied</string>
    <string name="default_digits_str">[---------- %s digits ----------]</string>
    <string name="invalid_top_up_code">Sorry no existing top up code</string>
    <string name="make_a_dail_msg_question">Do you want to make a dial?</string>
    <string name="update_success">Your record have been updated</string>
    <string name="update_not_success">Your record have not been updated</string>
    <string name="empty">Sorry you can\'t send empty message</string>
    <string name="empty_call">Sorry you can\'t dial an empty service number</string>
    <string name="add_new_service">Add new service</string>
    <string name="banner_ad_unit_id">ca-app-pub-9717530251283322/8803505493</string>

    <string-array name="database">
        <item>Old Database</item>
        <item>New Database</item>
    </string-array>
</resources>
