<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/easy_top_up_background"
    android:padding="16dp"
    tools:context="ocr.avaboy.com.CRUDItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/white_transparent_border_80"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:text="Create The Service Name"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:shadowRadius="1.5"
            android:shadowDy="1.5"
            android:shadowDx="1.6"
            android:shadowColor="@android:color/black"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/crud_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/crud_name" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>



            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:src="@mipmap/ic_launcher_round" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/crud_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crud_description" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/crud_imie_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crud_imie_start" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crud_imie_end" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/crud_imie_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crud_imie_length"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/crud_save"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop" />

    </LinearLayout>


</ScrollView>
